--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -30,7 +30,19 @@
             background-color: red;
             color: white;
         }
+
+        .message-header .badge {
+            font-size: 0.75rem;
+            padding: 0.25rem 0.5rem;
+            margin-left: 0.5rem;
+        }
+
+        .message-header .badge i {
+            margin-right: 0.25rem;
+        }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    {% block extra_head %}{% endblock %}
 </head>
 <body>
     <!-- Navbar -->
@@ -72,6 +84,29 @@
                             <a class="nav-link" href="{% url 'marketplace_home' %}">Marketplace</a>
                         </li>
                     {% endif %}
+
+                    {% if user.is_staff %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown">
+                                <i class="fas fa-shield-alt"></i> Admin
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="{% url 'admin_reports_list' %}">
+                                    <i class="fas fa-flag"></i> Reports
+                                </a>
+                                <a class="dropdown-item" href="{% url 'admin_user_management' %}">
+                                    <i class="fas fa-users-cog"></i> User Management
+                                </a>
+                                <a class="dropdown-item" href="{% url 'admin_verification_list' %}">
+                                    <i class="fas fa-id-card"></i> Verification Requests
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="/admin/" target="_blank">
+                                    <i class="fas fa-tools"></i> Django Admin
+                                </a>
+                            </div>
+                        </li>
+                    {% endif %}
                 </ul>
                 
                 <ul class="navbar-nav ms-auto">
@@ -103,6 +138,12 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="{% url 'profile' %}">My Profile</a></li>
+                                <li><a class="dropdown-item" href="{% url 'blocked_users' %}">
+                                    <i class="fas fa-ban"></i> Blocked Users
+                                </a></li>
+                                <li><a class="dropdown-item" href="{% url 'generate_keys' %}">
+                                    <i class="fas fa-key"></i> Security Keys
+                                </a></li>
                                 <li><a class="dropdown-item" href="{% url 'my_items' %}">My Items</a></li>
                                 <li><a class="dropdown-item" href="{% url 'my_orders' %}">My Orders</a></li>
                                 <li><a class="dropdown-item" href="{% url 'sold_items' %}">Sold Items</a></li>
