--- a/backend/users/templates/users/login.html
+++ b/backend/users/templates/users/login.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <div class="container">
     <div class="row">
@@ -11,24 +10,49 @@
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="id_username" class="form-label">Username</label>
-                            <input type="text" name="username" id="id_username" class="form-control" required>
-                        </div>
-                        
-                        <div class="mb-3">
-                            <label for="id_password" class="form-label">Password</label>
-                            <input type="password" name="password" id="id_password" class="form-control" required>
-                            <div class="form-text text-end">
-                                <a href="{% url 'password_reset_request' %}">Forgot password?</a>
+                    
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger">
+                                {{ form.non_field_errors }}
                             </div>
+                        {% endif %}
+                    
+                        <div class="mb-3">
+                            {{ form.username.label_tag }}
+                            {{ form.username }}
+                            {% for error in form.username.errors %}
+                                <div class="text-danger">{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    
+                        <div class="mb-3">
+                            {{ form.password.label_tag }}
+                            {{ form.password }}
+                            {% for error in form.password.errors %}
+                                <div class="text-danger">{{ error }}</div>
+                            {% endfor %}
+                        </div>
+                    
+                        <div class="mb-3">
+                            {{ form.captcha.label_tag }}
+                            {{ form.captcha }}
+                            {% for error in form.captcha.errors %}
+                                <div class="text-danger">{{ error }}</div>
+                            {% endfor %}
                         </div>
                         
-                        <button type="submit" class="btn btn-primary">Login</button>
+
+                        <button type="submit" class="btn btn-primary w-100">Login</button>
                     </form>
+                    
                 </div>
-                <div class="card-footer">
-                    <small>Don't have an account? <a href="{% url 'register' %}">Register</a></small>
+                <div class="card-footer text-center">
+                  
+                        <small> Forgot your password ?   <a href="{% url 'password_reset_request' %}">     Reset here !!</a></small>
+                    
+                </div>
+                <div class="card-footer text-center">
+                    <small>Don't have an account? <a href="{% url 'register' %}">  Register</a></small>
                 </div>
             </div>
         </div>
