--- a/backend/users/templates/users/download_keys.html
+++ b/backend/users/templates/users/download_keys.html
@@ -37,7 +37,7 @@
                     <i class="fas fa-download"></i> Download Keys as File
                 </button>
                 
-                <a href="{% url 'profile' %}" class="btn btn-success">
+                <a href="{% url 'logout' %}" class="btn btn-success">
                     <i class="fas fa-check"></i> I've Saved My Keys
                 </a>
             </div>
